# filelight-win32

./: CMakeLists.txt  README.md  configure.sh  deps.cmake  toolchain-win32.cmake
